# tako-ai-core

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PLAN.md  PLAN_PHASE1.md  PLAN_PHASE10.md  PLAN_PHASE13.md  PLAN_PHASE14.md  PLAN_PHASE19.md  PLAN_PHASE2.md  PLAN_PHASE20.md  PLAN_PHASE21.md  PLAN_PHASE23.md  PLAN_PHASE25.md  PLAN_PHASE26.md  PLAN_PHASE3.md  PLAN_PHASE31.md  PLAN_PHASE33.md  PLAN_PHASE4.md  PLAN_PHASE6.md  PLAN_PHASE7.md  PLAN_PHASE8.md  PLAN_PHASE9.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  dco.yml  docs.yml  security.yml  wheels.yml
crates/tako-compat/: Cargo.toml
crates/tako-compat/src/: auth.rs  lib.rs  openai.rs  routes.rs  server.rs  sse.rs
crates/tako-compat/src/auth/: chained.rs  jwt.rs  mod.rs  oidc.rs  oidc_mtls_hook.rs  oidc_mtls_provider.rs  oidc_mtls_watcher.rs  static_tokens.rs  vault.rs  vault_token.rs
crates/tako-compat/tests/: oidc_mtls_e2e.rs  server.rs  vault_token.rs
crates/tako-core/: Cargo.toml
crates/tako-core/src/: error.rs  lib.rs  types.rs
crates/tako-core/src/traits/: confidence.rs  mcp.rs  mod.rs  policy.rs  provider.rs  router.rs  tool.rs  verifier.rs
crates/tako-core/tests/: error.rs  types.rs
crates/tako-governance/: Cargo.toml
crates/tako-governance/src/: cosign_bundle.rs  lib.rs  otel.rs  pii.rs  policy.rs  secrets.rs  sigstore.rs  sigstore_state.rs  sigstore_state_redis.rs
crates/tako-governance/src/secrets/: aws_sm.rs  azure_kv.rs  gcp_sm.rs  mod.rs  vault.rs
crates/tako-governance/tests/: otlp_collector_e2e.rs  secrets.rs  sigstore.rs
crates/tako-mcp/: Cargo.toml  build.rs
crates/tako-mcp/proto/: mcp_bridge.proto
crates/tako-mcp/src/: jsonrpc.rs  lib.rs  lifecycle.rs  registry.rs
crates/tako-mcp/src/transport/: grpc.rs  mod.rs  stdio.rs  streamable_http.rs  websocket.rs
crates/tako-mcp/tests/: grpc.rs  stdio.rs  streamable_http_sse.rs  websocket.rs
crates/tako-orchestrator/: Cargo.toml
crates/tako-orchestrator/src/: ab_mcts.rs  conductor.rs  features.rs  lib.rs  router.rs  self_caller.rs  single.rs  trinity.rs  types.rs  verifiers.rs
crates/tako-orchestrator/tests/: ab_mcts.rs  ab_mcts_streaming_verifier.rs  conductor.rs  conductor_streaming_verifier.rs  policy.rs  self_caller.rs  single.rs  trinity.rs
crates/tako-providers/azure-openai/: Cargo.toml
crates/tako-providers/azure-openai/src/: client.rs  lib.rs
crates/tako-providers/azure-openai/tests/: chat.rs
crates/tako-providers/bedrock/: Cargo.toml
crates/tako-providers/bedrock/src/: client.rs  convert.rs  lib.rs  stream.rs  url_prefetch.rs
crates/tako-providers/http-generic/: Cargo.toml
crates/tako-providers/http-generic/src/: lib.rs
crates/tako-providers/http-generic/tests/: streaming.rs
crates/tako-providers/mistral/: Cargo.toml
crates/tako-providers/mistral/src/: client.rs  convert.rs  lib.rs  stream.rs
crates/tako-providers/mistral/tests/: chat.rs
crates/tako-providers/ollama/: Cargo.toml
crates/tako-providers/ollama/src/: client.rs  convert.rs  lib.rs  stream.rs  url_prefetch.rs
crates/tako-providers/ollama/tests/: chat.rs
crates/tako-providers/openai/: Cargo.toml
crates/tako-providers/openai/src/: client.rs  convert.rs  lib.rs  stream.rs
crates/tako-providers/openai/tests/: chat.rs
crates/tako-providers/vertex/: Cargo.toml
crates/tako-providers/vertex/src/: client.rs  convert.rs  lib.rs  stream.rs
crates/tako-providers/vertex/tests/: chat.rs
crates/tako-py/: Cargo.toml
crates/tako-py/src/: conv.rs  lib.rs  py_ab_mcts.rs  py_azure.rs  py_bedrock.rs  py_compat.rs  py_conductor.rs  py_governance.rs  py_http_generic.rs  py_mcp.rs  py_ollama.rs  py_orch_event.rs  py_orch_output.rs  py_orchestrator.rs  py_provider.rs  py_python_provider.rs  py_router.rs  py_runtime.rs  py_secrets.rs  py_self_caller.rs  py_sigstore.rs  py_trinity.rs  py_vertex.rs
crates/tako-runtime/: Cargo.toml
crates/tako-runtime/src/: breaker.rs  budget.rs  budget_redis.rs  fallback.rs  lib.rs  limiter.rs  principal.rs  retry.rs
crates/tako-runtime/tests/: redis_budget.rs  runtime.rs
docs/: architecture.md  feature_matrix.md  index.md  mkdocs.yml  quickstart.md
docs/api/: python.md  rust.md
docs/concepts/: budgets.md  compat.md  mcp.md  orchestrators.md  policy.md  providers.md  routing.md  secrets.md  self_caller.md  sigstore.md  streaming.md  tracing.md  url_prefetch.md  vision.md
docs/recipes/: azure_openai.md  bedrock.md  chained_auth.md  conductor.md  eval_harness.md  mistral.md  mtls_rotation.md  oidc_introspection.md  ollama.md  opa_policy.md  self_caller.md  (+7 more)
examples/: 01_single_agent.py  02_conductor.py  07_openai_compat_server.py  08_custom_python_provider.py  09_azure_openai.py  10_vertex_gemini.py  11_secrets_vault.py  12_bedrock_streaming.py  13_trinity_router.py  14_self_caller.py  15_eval_harness.py  16_sigstore_keyless.py  17_grpc_mtls.py  18_budget_wired.py  19_budget_fanout.py  20_sigstore_full_chain.py  21_ab_mcts_stream.py  22_streaming_guard.py  23_state_store.py  24_tool_call_named_events.py  25_conductor_verifier.py  26_python_streaming_provider.py  28_state_store_hardened.py
plans/: PLAN_CLEANUP.md  PLAN_PHASE1.md  PLAN_PHASE11.md  PLAN_PHASE12.md  PLAN_PHASE14.md  PLAN_PHASE15.md  PLAN_PHASE16.md  PLAN_PHASE17.md  PLAN_PHASE18.md  PLAN_PHASE22.md  PLAN_PHASE24.md  PLAN_PHASE27.md  PLAN_PHASE28.md  PLAN_PHASE29.md  PLAN_PHASE2_5.md  PLAN_PHASE3.md  PLAN_PHASE30.md  PLAN_PHASE32.md  PLAN_PHASE34.md  PLAN_PHASE35.md  PLAN_PHASE36.md  PLAN_PHASE37.md  PLAN_PHASE38.md  PLAN_PHASE39.md  PLAN_PHASE40.md  PLAN_PHASE41.md  PLAN_PHASE42.md  PLAN_PHASE43.md  PLAN_PHASE44.md  PLAN_PHASE45.md  PLAN_PHASE46.md  PLAN_PHASE47.md  PLAN_PHASE48.md  PLAN_PHASE49.md  PLAN_PHASE5.md  PLAN_PHASE50.md  PLAN_PHASE7.md  SECURITY_PHASE10.md
scripts/: check_public_release.sh
(+96 files in other folders)
