[workspace]
resolver = "3"
members = [
  "crates/tako-core",
  "crates/tako-runtime",
  "crates/tako-providers/anthropic",
  "crates/tako-providers/openai",
  "crates/tako-providers/azure-openai",
  "crates/tako-providers/http-generic",
  "crates/tako-providers/bedrock",
  "crates/tako-providers/vertex",
  "crates/tako-providers/mistral",
  "crates/tako-providers/ollama",
  "crates/tako-mcp",
  "crates/tako-orchestrator",
  "crates/tako-governance",
  "crates/tako-compat",
  "crates/tako-py",
]

[workspace.package]
version      = "0.37.0"
edition      = "2024"
rust-version = "1.91.1"
license      = "Apache-2.0"
repository   = "https://github.com/nyankobu010/tako-ai-core"
authors      = ["The tako contributors"]

[workspace.lints.rust]
unsafe_code      = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
todo        = "deny"
dbg_macro   = "deny"
# Stylistic lints introduced in rustc 1.95 that fire inside
# `async_stream::try_stream!` macro expansions where auto-fix can't
# safely rewrite (let-chains across macro boundaries). The existing
# `if let X { if Y { ... } }` style is the team's choice for readability
# inside the complex streaming orchestrator code paths.
collapsible_if         = "allow"
manual_is_multiple_of  = "allow"

[workspace.dependencies]
# async core
tokio              = { version = "1.52", features = ["full"] }
tokio-util         = "0.7"
futures            = "0.3"
async-trait        = "0.1"
pin-project-lite   = "0.2"

# serde
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
schemars           = "1.2"

# errors / logging
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# http
reqwest            = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "webpki-roots", "http2", "charset"] }
eventsource-stream = "0.2"
url                = "2"
bytes              = "1"

# axum (Phase 2 compat server)
axum               = { version = "0.8", features = ["macros"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["cors", "trace"] }
hyper              = "1"

# reliability
governor           = "0.10"
failsafe           = "1.3"
# `backoff` was removed in Phase 35 — it was a workspace dep but never
# imported in any source file (retry.rs hand-rolls its own loop using
# `rand`). Removing it dropped the `backoff` + transitive `instant`
# unmaintained advisories without any behaviour change.

# observability
opentelemetry      = "0.31"
opentelemetry_sdk  = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

# governance / utilities
regex              = "1"
regorus            = "0.9"

# MCP (Model Context Protocol — official Rust SDK)
rmcp               = { version = "1.5", features = ["client", "transport-child-process", "transport-streamable-http-client"] }
# Phase 4 WebSocket MCP transport
tokio-tungstenite  = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
# Phase 4 gRPC MCP transport
tonic              = { version = "0.14", default-features = false, features = ["channel", "codegen", "router", "transport", "tls-ring", "tls-webpki-roots"] }
tonic-prost        = "0.14"
tonic-prost-build  = "0.14"
prost              = "0.14"
tokio-stream       = "0.1"

# PyO3 (Phase 1 wheel target)
pyo3               = { version = "0.28", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# AWS (Phase 2 Bedrock provider, Phase 2.5 Secrets Manager resolver)
aws-config              = { version = "1.8", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }
aws-sdk-bedrockruntime  = { version = "1.130", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }
aws-sdk-secretsmanager  = { version = "1.83", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }

# encoding (Phase 2.5 cloud resolvers + Bedrock binary blobs)
base64                  = "0.22"

# Phase 32 — IPv4 / IPv6 CIDR networks for the URL pre-fetch
# allowlist on Bedrock + Ollama. Small (~7 KB), zero
# transitive deps.
ipnet                   = "2"

# Phase 35 — cross-platform filesystem watcher used by the
# tako-compat `mtls-fs-watch` feature to auto-reload OIDC mTLS
# cert+key on disk rotation (cert-manager / Vault PKI / SPIRE /
# kubernetes-secret-mount). Optional; default builds do not pull
# this in.
notify                  = "8"

# ML inference (Phase 3 Trinity router; OnnxRouter behind `onnx` feature)
ort                     = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray                 = "0.16"

# RNG (Phase 4 AB-MCTS Thompson sampling)
rand                    = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng"] }

# Phase 4 Sigstore tool-catalogue verification
sigstore                = { version = "0.13", default-features = false, features = ["cert"] }

# Phase 4 Redis-backed BudgetBackend
# `tls-rustls-webpki-roots` enables `rediss://` URLs without an OpenSSL
# system dep — same TLS choice as `reqwest` and `tokio-tungstenite`
# elsewhere in the workspace.
redis                   = { version = "1.2", default-features = false, features = ["aio", "tokio-comp", "tokio-rustls-comp", "connection-manager", "script", "tls-rustls-webpki-roots"] }

# Test-time only (dev-deps in member crates)
tokio-test         = "0.4"
wiremock           = "0.6"
proptest           = "1"

# crates internal
tako-core          = { path = "crates/tako-core",                   version = "0.37.0" }
tako-runtime       = { path = "crates/tako-runtime",                version = "0.37.0" }
tako-mcp          = { path = "crates/tako-mcp",                    version = "0.37.0" }
tako-orchestrator = { path = "crates/tako-orchestrator",           version = "0.37.0" }
tako-governance   = { path = "crates/tako-governance",             version = "0.37.0" }
tako-providers-anthropic    = { path = "crates/tako-providers/anthropic",    version = "0.37.0" }
tako-providers-openai       = { path = "crates/tako-providers/openai",       version = "0.37.0" }
tako-providers-azure-openai = { path = "crates/tako-providers/azure-openai", version = "0.37.0" }
tako-providers-http-generic = { path = "crates/tako-providers/http-generic", version = "0.37.0" }
tako-providers-bedrock      = { path = "crates/tako-providers/bedrock",      version = "0.37.0" }
tako-providers-vertex       = { path = "crates/tako-providers/vertex",       version = "0.37.0" }
tako-providers-mistral      = { path = "crates/tako-providers/mistral",      version = "0.37.0" }
tako-providers-ollama       = { path = "crates/tako-providers/ollama",       version = "0.37.0" }
tako-compat                 = { path = "crates/tako-compat",                 version = "0.37.0" }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
