[package]
name         = "tako-compat"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "OpenAI-compatible HTTP server for tako (Phase 2)."

[lints]
workspace = true

[dependencies]
tako-core          = { workspace = true }
tako-orchestrator  = { workspace = true }
async-trait        = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
hyper              = { workspace = true }
# Phase 14.B — optional auth providers. Defaults stay off so existing
# `StaticTokens`-only deployments see no new transitive deps.
jsonwebtoken       = { version = "9.3", optional = true }
reqwest            = { workspace = true, optional = true }
vaultrs            = { version = "0.7", optional = true }

[features]
# Phase 14.B feature gates. Each enables one `AuthResolver` impl.
jwt   = ["dep:jsonwebtoken"]
# OIDC = JWT + JWKS rotation + discovery doc; reuses the JWT decoder.
oidc  = ["jwt", "dep:reqwest"]
# Phase 15.B.1 — Vault providers (AppRole / Kubernetes) post directly
# to Vault auth endpoints via reqwest, so the `vault` feature now also
# pulls in reqwest.
vault = ["dep:vaultrs", "dep:reqwest"]

[dev-dependencies]
tokio              = { workspace = true, features = ["full"] }
reqwest            = { workspace = true }
wiremock           = { workspace = true }
tempfile           = "3"
