[package]
name         = "tako-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Vendor-neutral traits and types for the tako agentic framework."

[lints]
workspace = true

[dependencies]
async-trait        = { workspace = true }
futures            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true }
proptest           = { workspace = true }
