[package]
name         = "tako-governance"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Enterprise plumbing for tako: OTel tracing, PII redaction, secret resolvers."

[lints]
workspace = true

[dependencies]
tako-core          = { workspace = true }
async-trait        = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry      = { workspace = true }
opentelemetry_sdk  = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
regex              = { workspace = true }
regorus            = { workspace = true }
sha2               = "0.11"
hex                = "0.4"
chrono             = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Phase 2.5 cloud secret resolvers
reqwest                = { workspace = true }
base64                 = { workspace = true }
aws-config             = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }

# Phase 4 Sigstore tool-catalogue verification (optional, behind `sigstore`).
sigstore               = { workspace = true, optional = true }

[features]
default  = []
sigstore = ["dep:sigstore"]

[dev-dependencies]
tokio    = { workspace = true, features = ["full"] }
wiremock = { workspace = true }
sigstore = { workspace = true }
