[package]
name         = "tako-mcp"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "MCP (Model Context Protocol) client transports and tool registry for tako."

[lints]
workspace = true

[dependencies]
tako-core          = { workspace = true }
async-trait        = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
url                = { workspace = true }
async-stream       = "0.3"
reqwest            = { workspace = true }
# Optional WebSocket MCP transport (Phase 4). Enable via `--features ws`.
tokio-tungstenite  = { workspace = true, optional = true }

[features]
default = []
ws      = ["dep:tokio-tungstenite"]

[dev-dependencies]
tokio              = { workspace = true, features = ["full"] }
tokio-tungstenite  = { workspace = true }
